methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
var x=0
^PictureMono2:1: error: expected class or object definition
var x=0
^PictureMono2:2: error: expected class or object definition
var y=0
^PictureMono2:3: error: expected class or object definition
var z=0
^PictureMono2:4: error: expected start of definition
override def run() {
         ^PictureMono2:9: error: Missing closing brace `}' assumed here
def fourV(){
^PictureMono2:9: error: expected class or object definition
def fourV(){
^PictureMono2:31: error: Missing closing brace `}' assumed here
 def ligneV(){
 ^